--- a/app.css
+++ b/app.css
@@ -1,2 +1,52 @@
-@charset utf-8;body{margin:0;position:fixed;top:0;right:0;bottom:0;left:0}svg{width:100%;height:100%}#journalism-map-container{width:900px;height:500px;margin:auto}
+@charset utf-8;
 /*# sourceMappingURL=app.css.map */
+.interactive-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+#graphs{
+  width: 100%;
+}
+.short{
+  height: 150px;
+}
+.tall{
+  height: 350px;
+}
+.section {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+/* Mobile Styles */
+@media only screen and (max-width: 400px) {
+  body {
+    background-color: #F09A9D; /* Red */
+  }
+}
+
+/* Tablet Styles */
+@media only screen and (min-width: 401px) and (max-width: 960px) {
+  body {
+    background-color: #F5CF8E; /* Yellow */
+  }
+  .graph-left,
+  .graph-right,
+  .zip-code-search,
+  .graph-legend,
+  .source,
+  .THP-logo{
+    width: 50%
+  }
+}
+
+/* Desktop Styles */
+@media only screen and (min-width: 961px) {
+  body {
+    background-color: #ffffff; /* Blue */
+  }
+}
