--- a/app.css
+++ b/app.css
@@ -24,16 +24,12 @@
 
 /* Mobile Styles */
 @media only screen and (max-width: 400px) {
-  body {
-    background-color: #F09A9D; /* Red */
-  }
+
 }
 
 /* Tablet Styles */
 @media only screen and (min-width: 401px) and (max-width: 960px) {
-  body {
-    background-color: #F5CF8E; /* Yellow */
-  }
+  
   .graph-left,
   .graph-right,
   .zip-code-search,
@@ -46,7 +42,17 @@
 
 /* Desktop Styles */
 @media only screen and (min-width: 961px) {
-  body {
-    background-color: #ffffff; /* Blue */
+  .interactive-container {
+    width: 960px;
+    margin: 0 auto;
   }
+  .graph-left,
+  .graph-right,
+  .zip-code-search,
+  .graph-legend,
+  .source,
+  .THP-logo{
+    width: 50%
+  }
+
 }
