--- a/app.css
+++ b/app.css
@@ -20,6 +20,10 @@
   justify-content: center;
   align-items: center;
 }
+.header{
+  font-weight: bold;
+  font-size: 20px;
+}
 
 
 /* Mobile Styles */
@@ -29,7 +33,7 @@
 
 /* Tablet Styles */
 @media only screen and (min-width: 401px) and (max-width: 960px) {
-  
+
   .graph-left,
   .graph-right,
   .zip-code-search,
