--- a/app.css
+++ b/app.css
@@ -24,9 +24,11 @@
   display: flex;
   align-items: center;
 }
-.header{
+.title-container{
   font-weight: bold;
   font-size: 20px;
+  height: 50px;
+  padding: 30px 20px;
 }
 .thp-logo-container {
     width: 50%;
@@ -36,7 +38,7 @@
 }
 .source-container {
     width: 50%;
-    padding: 30px 20px;;
+    padding: 30px 20px;
     margin-right: auto;
 
 }
@@ -46,7 +48,8 @@
 .thp-logo-container{
   display:none;
 }
-.source-container {
+.source-container,
+.title-container {
     padding: 30px 20px;;
     margin: auto;
     text-align: center;
