--- a/app.css
+++ b/app.css
@@ -66,8 +66,8 @@
 /* Tablet Styles */
 @media only screen and (min-width: 401px) and (max-width: 960px) {
 
-  .graph-left,
-  .graph-right{
+  .graph1,
+  .graph2{
     width: 50%
   }
 }
@@ -78,8 +78,8 @@
     width: 960px;
     margin: 0 auto;
   }
-  .graph-left,
-  .graph-right{
+  .graph1,
+  .graph2{
     width: 50%
   }
 
