--- a/app.css
+++ b/app.css
@@ -22,11 +22,15 @@
     padding: 0 10px;
     margin-left: auto;
 }
+.search-container{
+  margin-top: 10px !important;
+  margin-bottom: 10px !important;
+}
 .source-container {
     width: 50%;
 }
 .left-align{
-  padding: 30px 20px;
+  padding: 20px 20px;
   margin-right: auto;
 }
 .center-align{
