--- a/app.css
+++ b/app.css
@@ -15,6 +15,8 @@
 .title-container{
   font-weight: bold;
   font-size: 20px;
+  margin-top: 20px !important;
+  margin-bottom: 10px !important;
 }
 .logo-container {
     width: 50%;
@@ -25,6 +27,10 @@
 .search-container{
   margin-top: 10px !important;
   margin-bottom: 10px !important;
+}
+.error-box{
+  margin-bottom: 10px !important;
+  color: red;
 }
 .source-container {
     width: 50%;
